--- a/Front-End/src/pages/questions-page/QuestionPage.css
+++ b/Front-End/src/pages/questions-page/QuestionPage.css
@@ -14,6 +14,18 @@
     overflow-y: scroll;
 }
 
+.question-container::-webkit-scrollbar {
+    width: 2px;
+}
+
+.question-container::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.question-container::-webkit-scrollbar-thumb {
+    background-color: var(--accent);
+}
+
 .tags {
     margin: 0 5px;
     padding: 5px 10px;
