--- a/Front-End/src/pages/recommendation/Recommendation.css
+++ b/Front-End/src/pages/recommendation/Recommendation.css
@@ -14,6 +14,19 @@
     align-items: center;
     margin: 20px;
 }
+
+.recomendation::-webkit-scrollbar {
+    width: 2px;
+}
+
+.recomendation::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.recomendation::-webkit-scrollbar-thumb {
+    background-color: var(--accent);
+}
+
 .recommendation-text {
     font-size: 15px;
     line-height: 1.5;
